# ThreadFrameworkBase

./: CMakeLists.txt  main.cpp
Include/: Main.h  MainThread.h  Server.h  ThreadA.h  ThreadB.h  WorkerThread.h  transferQueue.h
src/: server.cpp
